--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 
     <!-- How to Order Fuel -->
     <section id="howto">
-        <div class="container">
+        <div class="container  my-5 py-5">
             <div class="row">
                 <div class="col-12 col-sm-6">
                     <img src="images/circlephone1.png" alt="" id="phone_circle" class="phone_circle" />
@@ -113,7 +113,7 @@
                     <span id="usingour" class="usingour sec_paragraph">
               (Using Our Web App)
             </span>
-                    <p>
+                    <p class="usingour_para">
                         We have created a strong webapp to order fuel for your assets. The webapp is very simple and strong. You can order fuel very easily by following the steps below! You don’t need to follow the first two steps once you register.
                     </p>
 
@@ -124,8 +124,8 @@
                                 <div class="timeline-panel">
                                     <div class="flex-container flex-around">
                                         <div class="timeline-heading">
-                                            <h4 class="timeline-title ">Mussum ipsum cacilds</h4>
-                                            <p>2 sections</p>
+                                            <h4 class="timeline-title ">Register</h4>
+                                            <p>For setting up your account we need some of your info. You have to add your asset for the first time.</p>
                                         </div>
                                         <div class="timeline-clock">
                                             <p></p>
@@ -138,8 +138,8 @@
                                 <div class="timeline-panel">
                                     <div class="flex-container flex-around">
                                         <div class="timeline-heading">
-                                            <h4 class="timeline-title ">Mussum ipsum cacilds</h4>
-                                            <p>2 sections</p>
+                                            <h4 class="timeline-title ">Add an Asset</h4>
+                                            <p>Once you add your asset and register for the account you can simply select an asset from the asset list!</p>
                                         </div>
                                         <div class="timeline-clock">
                                             <p></p>
@@ -152,8 +152,8 @@
                                 <div class="timeline-panel">
                                     <div class="flex-container flex-around">
                                         <div class="timeline-heading">
-                                            <h4 class="timeline-title ">Mussum ipsum cacilds</h4>
-                                            <p>2 sections</p>
+                                            <h4 class="timeline-title ">Place an order</h4>
+                                            <p>After completing the registration process you can simply order fuel by selecting an asset. </p>
                                         </div>
                                         <div class="timeline-clock">
                                             <p></p>
@@ -166,8 +166,8 @@
                                 <div class="timeline-panel">
                                     <div class="flex-container flex-around">
                                         <div class="timeline-heading">
-                                            <h4 class="timeline-title ">Mussum ipsum cacilds</h4>
-                                            <p>2 sections</p>
+                                            <h4 class="timeline-title ">Get Fuel</h4>
+                                            <p>We recieve your order at once. We will deliver the fuel in the specific time slot you selected!</p>
                                         </div>
                                         <div class="timeline-clock">
                                             <p></p>
@@ -184,34 +184,36 @@
 
     <!-- Features -->
     <section id="featuresofwebapp">
-        <div class="container" id="features">
+        <div class="container  my-5 py-5" id="features">
             <div class="row text-center">
                 <h3 class="featuresheading main_heading" id="featuresheading">
                     Features of Our Webapp
                 </h3>
             </div>
-            <div class="row justify-content-evenly text-center">
-                <div class="col-6">
-                    <i class="fas fa-check-circle"></i>One of two columns
+            <div class="row justify-content-evenly align-items-center text-center">
+                <div class="col-6 features_text ">
+                    <i class="fas fa-check-circle"></i> One of two columns
                 </div>
-                <div class="col-6">
-                    <i class="fas fa-check-circle"></i>One of two columns
-                </div>
-            </div>
-            <div class="row justify-content-evenly text-center">
-                <div class="col-6">
-                    <i class="fas fa-check-circle"></i>One of two columns
-                </div>
-                <div class="col-6">
-                    <i class="fas fa-check-circle"></i>One of two columns
+                <div class="col-6 features_text ">
+                    <i class="fas fa-check-circle"></i> One of two columns
                 </div>
             </div>
-            <div class="row justify-content-evenly text-center">
-                <div class="col-6">
-                    <i class="fas fa-check-circle"></i>One of two columns
+            <div class="row justify-content-evenly align-items-center text-center">
+                <div class="col-6 features_text ">
+                    <i class="fas fa-check-circle"></i> One of two columns
                 </div>
-                <div class="col-6">
-                    <i class="fas fa-check-circle"></i>One of two columns
+                <div class="col-6 features_text ">
+                    <i class="fas fa-check-circle"></i> One of two columns
+                </div>
+            </div>
+            <div class="row justify-content-evenly align-items-center text-center">
+
+
+                <div class="col-6 features_text ">
+                    <i class="fas fa-check-circle"></i> One of two columns
+                </div>
+                <div class="col-6 features_text ">
+                    <i class="fas fa-check-circle"></i> One of two columns
                 </div>
             </div>
             <div class="row justify-content-evenly text-center">
@@ -222,7 +224,7 @@
 
     <!-- Why Urgent Fuel? -->
     <section id="featuresofwebapp">
-        <div class="container" id="features">
+        <div class="container  my-5 py-5" id="features">
             <div class="row text-center">
                 <h3 class="featuresheading main_heading" id="featuresheading">
                     Why Urgent Fuel?
@@ -234,19 +236,19 @@
 
                 </p>
             </div>
-            <div class="row justify-content-between">
+            <div class="row justify-content-between text-center">
                 <div class="col-4">One of two columns</div>
                 <div class="col-4">One of two columns</div>
             </div>
-            <div class="row justify-content-between">
+            <div class="row justify-content-between text-center">
                 <div class="col-4">One of two columns</div>
                 <div class="col-4">One of two columns</div>
             </div>
-            <div class="row justify-content-between">
+            <div class="row justify-content-between text-center">
                 <div class="col-4">One of two columns</div>
                 <div class="col-4">One of two columns</div>
             </div>
-            <div class="row justify-content-between">
+            <div class="row justify-content-between text-center">
                 <div class="col-4">One of two columns</div>
                 <div class="col-4">One of two columns</div>
             </div>
@@ -254,7 +256,7 @@
     </section>
     <!-- Who We Serve? -->
     <section id="whoweserve" class="whoweserve">
-        <div class="container" id="whoheading">
+        <div class="container  my-5 py-5" id="whoheading">
             <div class="row text-center">
                 <h3 class="featuresheading main_heading" id="featuresheading">
                     Who We Serve?
@@ -313,7 +315,7 @@
 
     <!-- Our Products -->
     <section id="ourproducts" class="ourproducts">
-        <div class="container">
+        <div class="containe  my-5 py-5r">
             <div class="row text-center">
                 <h3 class="featuresheading main_heading" id="featuresheading">
                     Our Products
@@ -383,7 +385,7 @@
     <!-- Smart Tank -->
 
     <section class="smart_tank " id="smart_tank ">
-        <div class="container ">
+        <div class="container  my-5 py-5">
             <div class="row ">
                 <div class="col-12 col-sm-6 ">
                     <span id="usingour " class="usingour ">Explore</span>
@@ -461,7 +463,7 @@
 
     <!-- Testimonial -->
     <section class="testiomonial " id="testimonial ">
-        <div class="container ">
+        <div class="container  my-5 py-5 ">
             <div class="row text-center ">
                 <h3 class="featuresheading main_heading " id="featuresheading ">
                     What Our Customers Say about us!
@@ -577,7 +579,7 @@
 
     <!-- our team -->
     <section class="ourteam " id="ourteam ">
-        <div class="container ">
+        <div class="container  my-5 py-5">
             <div class="row text-center ">
                 <h3 class="featuresheading main_heading " id="featuresheading ">
                     Our Team
@@ -918,7 +920,7 @@
 
     <!-- Blog -->
     <section class="blogsection " id="blogsection ">
-        <div class="container swiper-container ">
+        <div class="container swiper-container  my-5 py-5">
             <div class="row text-center ">
                 <h3 class="featuresheading main_heading " id="featuresheading ">
                     Blog
@@ -1030,7 +1032,7 @@
 
     <!-- faq -->
     <section class="frequent " id="frequent ">
-        <div class="container ">
+        <div class="container  my-5 py-5">
             <div class="row text-center ">
                 <h3 class="featuresheading main_heading " id="featuresheading ">
                     Frequetly Asked Questions
@@ -1136,7 +1138,7 @@
 
     <!-- contact -->
     <section class="contactsec " id="contactsec ">
-        <div class="container ">
+        <div class="container  my-5 py-5">
             <div class="row text-center ">
                 <h3 class="featuresheading main_heading " id="featuresheading ">
                     Contact
