--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <link rel="stylesheet" href="css/vertical.css" />
     <link rel="stylesheet" href="css/logo_slick.css" />
     <link rel="stylesheet" href="css/accordion.css" />
+    <link rel="stylesheet" href="css/footer.css">
     <link rel="stylesheet" href="css/our_team.css" />
     <!-- <link rel="stylesheet" href="swiper-bundle.min.css" /> -->
 
@@ -1171,7 +1172,7 @@
                     <div class="container ">
                         <div class="row ">
                             <div>
-                                <details open>
+                                <details>
                                     <summary>
                                         How do you create an accordion?
                                     </summary>
@@ -1267,6 +1268,121 @@
         </div>
     </section>
 
+    <!-- =================Fotter Start============== -->
+
+    <!-- Footer -->
+    <footer class="ft">
+        <div class="container py-5">
+            <div class="row py-4">
+                <div class="col-lg-4 col-md-6 mb-4 mb-lg-0"><img src="images/footer/logo.png" alt="" class="mb-3">
+                    <p class="font-italic text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt.</p>
+
+                </div>
+
+                <div class="col-lg-2 col-md-6 mb-4 mb-lg-0">
+                    <h6 class=" font-weight-bold mb-4"></h6>
+                    <ul class="list-unstyled mb-0">
+                        <li class="mb-2">
+                            <a href="#" class="text-muted"></a>
+                        </li>
+                        <li class="mb-2">
+                            <a href="#" class="text-muted"></a>
+                        </li>
+                        <li class="mb-2">
+                            <a href="#" class="text-muted"></a>
+                        </li>
+                        <li class="mb-2">
+                            <a href="#" class="text-muted"></a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="col-lg-2 col-md-6 mb-4 mb-lg-0">
+                    <!-- <h6 class=" font-weight-bold mb-4">Pages</h6> -->
+                    <ul class="list-unstyled mb-0">
+                        <li class="mb-2"><a href="#" class="textfooter">Home</a></li>
+                        <li class="mb-2"><a href="#" class="textfooter">Why Us?</a></li>
+                        <li class="mb-2"><a href="#" class="textfooter">Who We Serve?</a></li>
+                        <li class="mb-2"><a href="#" class="textfooter">Products</a></li>
+                        <li class="mb-2"><a href="#" class="textfooter">Team</a></li>
+                        <li class="mb-2"><a href="#" class="textfooter">Blog</a></li>
+                        <li class="mb-2"><a href="#" class="textfooter">Terms & Condition</a></li>
+                        <li class="mb-2"><a href="#" class="textfooter">Privacy Policy</a></li>
+                    </ul>
+                </div>
+
+                <div class="col-lg-3 col-md-6 mb-4 mb-lg-0">
+                    <div class="con">
+                        <div class="d-flex-flex-column mb-0 contact-section">
+                            <div class="d-flex flex-row align-items-end">
+                                <img src="images/footer/Group 484.png">
+                                <p>+8801736783227</p>
+                            </div>
+
+                            <div class="d-flex flex-row align-items-end">
+                                <img src="images/footer/Group 483.png">
+                                <p>urgent.fuel@gmail.com</p>
+                            </div>
+
+                            <div class="d-flex flex-row align-items-start">
+                                <img src="images/footer/Group 482.png">
+                                <p>Ventura Iconia, Level 3, House 37, Road 11, Block H, Banani, Dhaka-1213</p>
+                            </div>
+                        </div>
+
+                    </div>
+
+                </div>
+                <!-- <div class="container">
+                   <div class="row">
+                    <div class="col-md-12">
+                        div
+                    </div>
+                   </div>
+            </div> -->
+
+                <div class="hrline">
+
+                </div>
+
+                <div class="container">
+                    <div class="row">
+                        <div class="col-md-6">
+                            <p class="mt-3">All rights reserved to <span class="uftl_text">URGENT FUEL TECHNOLOGIES (BD) LIMITED</span> </p>
+                        </div>
+
+                        <div class="col-md-6 mt-3">
+                            <div class="social_icon">
+                                <ul>
+                                    <li>
+                                        <a href=""><img src="images/logo/Vector-1.png" alt=""></a>
+                                    </li>
+                                    <li>
+                                        <a href=""><img src="images/logo/Vector-2.png" alt=""></a>
+                                    </li>
+                                    <li>
+                                        <a href=""><img src="images/logo/Vector-3.png" alt=""></a>
+                                    </li>
+                                    <li>
+                                        <a href=""><img src="images/logo/Vector-4.png" alt=""></a>
+                                    </li>
+                                    <li>
+                                        <a href=""><img src="images/logo/Vector.png" alt=""></a>
+                                    </li>
+                                    <!-- <li><a href=""><img src="img2/cb.png" alt=""><a><li> -->
+
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+
+        </div>
+        </div>
+
+
+    </footer>
     <!-- scripts -->
 
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js "></script>
